--- a/src/app/modals/create-todo/create-todo.component.html
+++ b/src/app/modals/create-todo/create-todo.component.html
@@ -1,3 +1,23 @@
-<p>
-  create-todo works!
-</p>
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-title>Add a new todo</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="dismissModal()">Close</ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content fullscreen>
+  <form [formGroup]="todoForm" (submit)="save()">
+    <ion-item>
+      <ion-label position="floating">Name</ion-label>
+      <ion-input formControlName="name" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Description</ion-label>
+      <ion-input formControlName="description"></ion-input>
+    </ion-item>
+
+    <ion-button type="submit" expand="block" [disabled]="!todoForm.valid">Submit</ion-button>
+  </form>
+</ion-content>
