--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,15 +9,15 @@
 <ion-content>
   <ion-list>
     <ion-item-sliding *ngFor="let list of lists">
-      <ion-item>
+      <ion-item [routerLink]="['/list-details', list?.id]" detail="true">
         <ion-label>
-          <h3>{{list?.name}}</h3>
+          <h2>{{list?.name}}</h2>
         </ion-label>
       </ion-item>
 
       <ion-item-options side="end">
         <ion-item-option (click)="delete(list)" color="danger">
-          <ion-icon name="trash-outline"></ion-icon>
+          <h2><ion-icon name="trash-outline"></ion-icon></h2>
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
