--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -48,3 +48,16 @@
         <ion-button type="submit" expand="block" [disabled]="!loginForm.valid">Submit</ion-button>
     </form>
 </ion-content>
+
+<ion-footer>
+    <ion-list>
+        <ion-item>
+            <ion-label>
+                <a [routerLink]="['/register']">Register</a>
+            </ion-label>
+            <ion-note slot="end">
+                <a [routerLink]="['/password-recovery']">Forgot password</a>
+            </ion-note>
+        </ion-item>
+    </ion-list>
+</ion-footer>
