--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -52,12 +52,8 @@
 <ion-footer>
     <ion-list>
         <ion-item>
-            <ion-label>
-                <a [routerLink]="['/register']">Register</a>
-            </ion-label>
-            <ion-note slot="end">
-                <a [routerLink]="['/password-recovery']">Forgot password</a>
-            </ion-note>
+            <a [routerLink]="['/register']">Register</a>
+            <a slot="end" [routerLink]="['/password-recovery']">Forgot password</a>
         </ion-item>
     </ion-list>
 </ion-footer>
