--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -79,7 +79,7 @@
             </ion-text>
         </ion-item>
 
-        <ion-item>
+        <ion-item lines='{{errorMessage ? "full" : "none"}}'>
             <ion-text color="danger" *ngIf="errorMessage">
                 {{ errorMessage }}
             </ion-text>
