--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -1,36 +1,38 @@
-<ion-header [translucent]="true">
-    <ion-toolbar>
-        <ion-title>
-            {{ list?.name }}
-        </ion-title>
-    </ion-toolbar>
-</ion-header>
+<ng-container  *ngIf="list$ | async as list">
+    <ion-header [translucent]="true">
+        <ion-toolbar>
+            <ion-title>
+                {{ list?.name }}
+            </ion-title>
+        </ion-toolbar>
+    </ion-header>
 
-<ion-content>
-    <ion-list>
-        <ion-item-sliding *ngFor="let todo of list?.todos">
-            <ion-item color="{{todo?.isDone ? 'light' : ''}}">
-                <ion-label color="{{todo?.isDone ? 'medium' : ''}}">
-                    <h2>{{todo?.name}}</h2>
-                    <ion-label class="ion-text-wrap"
-                               *ngIf='todo?.description !== null && todo?.description !== ""'>
-                        {{ todo.description }}
+    <ion-content>
+        <ion-list>
+            <ion-item-sliding *ngFor="let todo of list?.todos">
+                <ion-item color="{{todo?.isDone ? 'light' : ''}}">
+                    <ion-label color="{{todo?.isDone ? 'medium' : ''}}">
+                        <h2>{{todo?.name}}</h2>
+                        <ion-label class="ion-text-wrap"
+                                *ngIf='todo?.description !== null && todo?.description !== ""'>
+                            {{ todo.description }}
+                        </ion-label>
                     </ion-label>
-                </ion-label>
-                <ion-toggle (ionChange)="toggleIsDone(todo)" checked="{{ todo?.isDone }}"></ion-toggle>
-            </ion-item>
+                    <ion-toggle (ionChange)="toggleIsDone(todo)" checked="{{ todo?.isDone }}"></ion-toggle>
+                </ion-item>
 
-            <ion-item-options side="end">
-                <ion-item-option (click)="delete(todo)" color="danger">
-                    <h2><ion-icon name="trash-outline"></ion-icon></h2>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list>
-</ion-content>
-
+                <ion-item-options side="end">
+                    <ion-item-option (click)="delete(list, todo)" color="danger">
+                        <h2><ion-icon name="trash-outline"></ion-icon></h2>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </ion-list>
+    </ion-content>
 
 
-<ion-footer>
-    <ion-button expand="block" (click)="presentModal()">Add a new todo</ion-button>
-</ion-footer>
+
+    <ion-footer>
+        <ion-button expand="block" (click)="presentModal(list)">Add a new todo</ion-button>
+    </ion-footer>
+</ng-container>
