CRUD list, todos and views update

--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -18,7 +18,7 @@
                             {{ todo.description }}
                         </ion-label>
                     </ion-label>
-                    <ion-toggle (ionChange)="toggleIsDone(todo)" checked="{{ todo?.isDone }}"></ion-toggle>
+                    <ion-toggle (ionChange)="toggleIsDone(list, todo)" checked="{{ todo?.isDone }}"></ion-toggle>
                 </ion-item>
 
                 <ion-item-options side="end">
