--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,27 +3,46 @@
     <ion-title>
       Lists
     </ion-title>
+    <ion-buttons slot="primary" type="icon-only" (click)="toggleReorderGroup()">
+      <ion-button >
+        <ion-icon *ngIf="isDisabled" name="reorder-two-outline"></ion-icon>
+        <ion-icon *ngIf="!isDisabled" name="checkmark-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item-sliding *ngFor="let list of lists$ | async">
-      <ion-item [routerLink]="['/list-details', list?.id]" detail="true">
-        <ion-label>
-          <h2>{{list?.name}}</h2>
-        </ion-label>
-      </ion-item>
+    <ion-reorder-group (ionItemReorder)="onRenderItems($event)" [disabled]="isDisabled">
+      <ion-item-sliding *ngFor="let list of lists$ | async">
 
-      <ion-item-options side="end">
-        <ion-item-option (click)="presentShareModal(list)" color="primary">
-          <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="delete(list)" color="danger">
-          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
+        <ion-item [routerLink]="['/list-details', list?.id]" detail="true">
+          <ion-label>
+            <h2>{{list?.name}}</h2>
+          </ion-label>
+          <ion-reorder slot="start"></ion-reorder>
+        </ion-item>
+
+        <ion-item-options side="start">
+          <ion-item-option (click)="presentShareModal(list)" color="primary">
+            <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+        <ion-item-options side="end">
+          <ion-item-option (click)="delete(list)" color="danger">
+            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+      <!--ion-item *ngFor="let item of listItems">
+        <ion-label>
+          {{item}}
+        </ion-label>
+        <ion-reorder slot="start"></ion-reorder>
+      </ion-item-->
+    </ion-reorder-group>
   </ion-list>
 </ion-content>
 
