--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,51 +1,77 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Lists
-    </ion-title>
-    <ion-buttons slot="primary" type="icon-only" (click)="toggleReorderGroup()">
-      <ion-button >
-        <ion-icon *ngIf="isDisabled" name="reorder-two-outline"></ion-icon>
-        <ion-icon *ngIf="!isDisabled" name="checkmark-circle-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+    <ion-toolbar>
+        <ion-title>
+            Lists
+        </ion-title>
+        <ion-buttons slot="primary" type="icon-only" (click)="toggleReorderGroup()">
+            <ion-button>
+                <ion-icon *ngIf="isDisabled" name="reorder-two-outline"></ion-icon>
+                <ion-icon *ngIf="!isDisabled" name="checkmark-circle-outline"></ion-icon>
+            </ion-button>
+        </ion-buttons>
 
-  </ion-toolbar>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-reorder-group (ionItemReorder)="onRenderItems($event)" [disabled]="isDisabled">
-      <ion-item-sliding *ngFor="let list of lists$ | async">
+    <ion-list>
+        <ion-reorder-group (ionItemReorder)="onRenderItems($event)" [disabled]="isDisabled">
+            <ion-item-sliding *ngFor="let list of lists$ | async">
 
-        <ion-item [routerLink]="['/list-details', list?.id]" detail="true">
-          <ion-label>
-            <h2>{{list?.name}}</h2>
-          </ion-label>
-          <ion-reorder slot="start"></ion-reorder>
-        </ion-item>
+                <ion-item [routerLink]="['/list-details', list?.id]" detail="true">
+                    <ion-label>
+                        <h2>{{list?.name}}</h2>
+                    </ion-label>
+                    <ion-reorder slot="start"></ion-reorder>
+                </ion-item>
 
-        <ion-item-options side="start">
-          <ion-item-option (click)="presentShareModal(list)" color="primary">
-            <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-        <ion-item-options side="end">
-          <ion-item-option (click)="delete(list)" color="danger">
-            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
-      <!--ion-item *ngFor="let item of listItems">
-        <ion-label>
-          {{item}}
-        </ion-label>
-        <ion-reorder slot="start"></ion-reorder>
-      </ion-item-->
-    </ion-reorder-group>
-  </ion-list>
+                <ion-item-options side="start">
+                    <ion-item-option (click)="presentShareModal(list)" color="primary">
+                        <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+                <ion-item-options side="end">
+                    <ion-item-option (click)="moveToBin(list)" color="danger">
+                        <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+
+
+            <!--
+        <ion-item *ngFor="let item of listItems">
+            <ion-label>
+            {{item}}
+            </ion-label>
+            <ion-reorder slot="start"></ion-reorder>
+        </ion-item-->
+        </ion-reorder-group>
+    </ion-list>
 </ion-content>
 
-<ion-footer>
-  <ion-button expand="block" (click)="presentModal()">Add new list</ion-button>
+<ion-footer class="ion-no-padding">
+
+   <ion-toolbar class="ion-no-padding">
+        <ion-grid class="ion-no-padding">
+            <ion-row class="ion-text-center">
+                <ion-col>
+                    <ion-button expand="block" fill="clear" (click)="presentModal()">
+                        <ion-icon name="add-outline" size="large" title="Add a new list"></ion-icon>
+                    </ion-button>
+                </ion-col>
+                <ion-col>
+                    <ion-button expand="block" fill="clear" disabled>
+                        <ion-icon name="search-outline" size="large"></ion-icon>
+                    </ion-button>
+                </ion-col>
+                <ion-col>
+                    <ion-button expand="block" fill="clear" [routerLink]="['/bin']" >
+                        <ion-icon name="trash-outline" size="large" style="color: #ed576b"></ion-icon>
+                    </ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+
+    </ion-toolbar>
+
 </ion-footer>
