Add search bar, refactor getOne on listService

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,77 +1,78 @@
-<ion-header [translucent]="true">
-    <ion-toolbar>
-        <ion-title>
-            Lists
-        </ion-title>
-        <ion-buttons slot="primary" type="icon-only" (click)="toggleReorderGroup()">
-            <ion-button>
-                <ion-icon *ngIf="isDisabled" name="reorder-two-outline"></ion-icon>
-                <ion-icon *ngIf="!isDisabled" name="checkmark-circle-outline"></ion-icon>
-            </ion-button>
-        </ion-buttons>
+<ng-container  *ngIf="lists$ | async as lists">
+    <ion-header [translucent]="true">
+        <ion-toolbar>
+            <ion-title>
+                Lists
+            </ion-title>
+            <ion-buttons slot="primary" type="icon-only" (click)="toggleReorderGroup()">
+                <ion-button>
+                    <ion-icon *ngIf="isDisabled" name="reorder-two-outline"></ion-icon>
+                    <ion-icon *ngIf="!isDisabled" name="checkmark-circle-outline"></ion-icon>
+                </ion-button>
+            </ion-buttons>
 
-    </ion-toolbar>
-</ion-header>
+        </ion-toolbar>
+    </ion-header>
 
-<ion-content>
-    <ion-list>
-        <ion-reorder-group (ionItemReorder)="onRenderItems($event)" [disabled]="isDisabled">
-            <ion-item-sliding *ngFor="let list of lists$ | async">
+    <ion-content>
+        <ion-searchbar (ionChange)="search($event.detail.value)"></ion-searchbar>
 
-                <ion-item [routerLink]="['/list-details', list?.id]" detail="true">
-                    <ion-label>
-                        <h2>{{list?.name}}</h2>
-                    </ion-label>
-                    <ion-reorder slot="start"></ion-reorder>
-                </ion-item>
+        <ion-list>
+            <ion-reorder-group (ionItemReorder)="onRenderItems($event)" [disabled]="isDisabled">
+                <ion-item-sliding *ngFor="let list of lists">
 
-                <ion-item-options side="start">
-                    <ion-item-option (click)="presentShareModal(list)" color="primary">
-                        <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
-                    </ion-item-option>
-                </ion-item-options>
-                <ion-item-options side="end">
-                    <ion-item-option (click)="moveToBin(list)" color="danger">
-                        <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-                    </ion-item-option>
-                </ion-item-options>
-            </ion-item-sliding>
+                    <ion-item [routerLink]="['/list-details', list?.id]" detail="true">
+                        <ion-label>
+                            <h2>{{list?.name}}</h2>
+                        </ion-label>
+                        <ion-reorder slot="start"></ion-reorder>
+                    </ion-item>
+
+                    <ion-item-options side="start">
+                        <ion-item-option (click)="presentShareModal(list)" color="primary">
+                            <ion-icon slot="icon-only" name="share-social-outline"></ion-icon>
+                        </ion-item-option>
+                    </ion-item-options>
+                    <ion-item-options side="end">
+                        <ion-item-option (click)="moveToBin(list)" color="danger">
+                            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                        </ion-item-option>
+                    </ion-item-options>
+                </ion-item-sliding>
 
 
-            <!--
-        <ion-item *ngFor="let item of listItems">
-            <ion-label>
-            {{item}}
-            </ion-label>
-            <ion-reorder slot="start"></ion-reorder>
-        </ion-item-->
-        </ion-reorder-group>
-    </ion-list>
-</ion-content>
+                <!--
+            <ion-item *ngFor="let item of listItems">
+                <ion-label>
+                {{item}}
+                </ion-label>
+                <ion-reorder slot="start"></ion-reorder>
+            </ion-item-->
+            </ion-reorder-group>
+        </ion-list>
+    </ion-content>
 
-<ion-footer class="ion-no-padding">
+    <ion-footer class="ion-no-padding">
 
-   <ion-toolbar class="ion-no-padding">
-        <ion-grid class="ion-no-padding">
-            <ion-row class="ion-text-center">
-                <ion-col>
-                    <ion-button expand="block" fill="clear" (click)="presentModal()">
-                        <ion-icon name="add-outline" size="large" title="Add a new list"></ion-icon>
-                    </ion-button>
-                </ion-col>
-                <ion-col>
-                    <ion-button expand="block" fill="clear" disabled>
-                        <ion-icon name="search-outline" size="large"></ion-icon>
-                    </ion-button>
-                </ion-col>
-                <ion-col>
-                    <ion-button expand="block" fill="clear" [routerLink]="['/bin']" >
-                        <ion-icon name="trash-outline" size="large" style="color: #ed576b"></ion-icon>
-                    </ion-button>
-                </ion-col>
-            </ion-row>
-        </ion-grid>
+        <ion-toolbar class="ion-no-padding">
+            <ion-grid class="ion-no-padding">
+                <ion-row class="ion-text-center">
+                    <ion-col>
+                        <ion-button expand="block" fill="clear" (click)="presentModal()">
+                            <ion-icon name="add-outline" size="large" title="Add a new list"></ion-icon>
+                        </ion-button>
+                    </ion-col>
+                    <ion-col size="6">
+                        <h6>{{ lists.length }} lists</h6>
+                    </ion-col>
+                    <ion-col>
+                        <ion-button expand="block" fill="clear" [routerLink]="['/bin']" >
+                            <ion-icon name="trash-outline" size="large" style="color: #ed576b"></ion-icon>
+                        </ion-button>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-toolbar>
 
-    </ion-toolbar>
-
-</ion-footer>
+    </ion-footer>
+</ng-container>
