--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -47,6 +47,8 @@
 
         <ion-button type="submit" expand="block" [disabled]="!loginForm.valid">Submit</ion-button>
     </form>
+    <ion-button (click)="loginGoogle()" expand="block">Google</ion-button>
+
 </ion-content>
 
 <ion-footer>
