--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
     <ion-toolbar *ngIf="list$ | async as list">
+        <ion-buttons slot="start">
+            <ion-button backButton><ion-icon name="arrow-back-outline" size="large"></ion-icon></ion-button>
+        </ion-buttons>
         <ion-title>
             {{ list?.name }}
         </ion-title>
