--- a/src/app/pages/list-details/list-details.page.html
+++ b/src/app/pages/list-details/list-details.page.html
@@ -39,11 +39,12 @@
             </ion-item>
         </ion-item-sliding>
     </ion-list>
+
+    
+
+    <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+        <ion-fab-button color="primary" *ngIf="list$ | async as list" (click)="presentModal(list)" [disabled]="!canWrite()">
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
-
-
-
-<ion-footer style="text-align: center; opacity: 0.7">
-    <ion-text  *ngIf="!canWrite()" color="primary">You don't have write access</ion-text>
-    <ion-button [disabled]="!canWrite()" expand="block" (click)="presentModal(list)" *ngIf="list$ | async as list">Add a new todo</ion-button>
-</ion-footer>
