--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -61,6 +61,8 @@
                         <h2>{{list?.name}}</h2>
                     </ion-label>
                     <ion-reorder slot="start"></ion-reorder>
+                    <ion-icon *ngIf="isSharedWithMe(list)" name="people-outline" style="color: gray"></ion-icon>
+                    <ion-icon *ngIf="isSharedByMe(list)" name="share-social-outline" style="color: gray"></ion-icon>
                 </ion-item>
 
                 <ion-item-options side="start">
